# PoliceDataset

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260416_0001_create_crime_records.py
app/: dashboard.py
archive/: pakistan_crimes_national_2000_2024.csv  pakistan_crimes_national_database_report.txt
notebooks/: 01_crime_analysis.ipynb
scripts/: load_data.ps1  plot_charts.ps1  run_migrations.ps1
src/police_dataset/: __init__.py  config.py  db.py  ingest.py  models.py  queries.py  visualization.py
