[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pakistan-crime-analytics"
version = "0.1.0"
description = "Crime analytics pipeline with migrations, ingestion, and visualizations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0",
  "jupyter>=1.0.0",
  "streamlit>=1.33.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
